@@ -35,7 +35,7 @@ public class EmailSenderTest {
     @Test
     public void testEmail() throws MessagingException, IOException {
         EmailSender sender = new EmailSender("localhost", 2525, "no-reply@radar-cns.org",
-                Collections.singletonList("test@radar-cns.org"));
+                List.of("test@radar-cns.org"));
 
         assertEquals(Collections.emptyList(), emailServer.getMessages());
 
@@ -59,6 +59,6 @@ public class EmailSenderTest {
     @Test(expected = IOException.class)
     public void testEmailNonExisting() throws MessagingException, IOException {
         EmailSender sender = new EmailSender("non-existing-host", 2525, "no-reply@radar-cns.org",
-                Collections.singletonList("test@radar-cns.org"));
+                List.of("test@radar-cns.org"));
     }
 }
